[app][Use case #1] Show a spinner with static responses
And Buy button to trigger them.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Checkout</string>
+    <string name="use_case_title_static">Use case #1. Static responses</string>
+    <string name="use_case_desc_static">Use static responses to test in-app billing</string>
+    <string name="buy">Buy</string>
 </resources>
