[app][Use case #3] Make items clickable in SkusActivity
Clicking on a not yet purchased item should start a purchase procedure,
clicking on a purchased item should consume it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="remove_ad_banner">Remove ad banner</string>
     <string name="use_case_title_skus">Use case #3. List of SKUs</string>
     <string name="use_case_desc_skus">Show a list of SKUs available for purchase. Click an item to purchase or consume it</string>
+    <string name="icon">icon</string>
 </resources>
