--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="use_case_title_skus">Use case #3. List of SKUs</string>
     <string name="use_case_desc_skus">Show a list of SKUs available for purchase. Click an item to purchase or consume it</string>
     <string name="icon">icon</string>
+    <string name="use_case_title_subscriptions">Use case #4. Subscriptions</string>
+    <string name="use_case_desc_subscriptions">Show a list of subscriptions. Allow buying a subscription and changing it</string>
+    <string name="change">Change</string>
+    <string name="_1_buy">1. Buy</string>
+    <string name="_2_select">2. Select</string>
+    <string name="_3_change">3. Change</string>
 </resources>
